5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4382/executions/1734_2505.log
== SUBMITION (2019-05-14 18:01:06) 
-- CODE:
from math import *
ang = eval(input("digite o angulo x: "))
k = int(input("numero de termos: "))
soma  = 0
b = 1
i = 0

while(i < k):
	sinal = (-1)**i
	sen = sinal*((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma,10))
-- EXECUTION TIME:
0.17097
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:32:10) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal : -1**i
	seno : sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.206714
-- ERROR:
  File "/home/codebench/codes/1734/2505/main.py", line 8
    sinal : -1**i
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:11) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal : -1**i
	seno : sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 9, in <module>
    seno : sinal * ((ang**b)/factorial(b))
NameError: name 'sinal' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:32:32) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno : sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.228029
-- ERROR:
  File "/home/codebench/codes/1734/2505/main.py", line 9
    seno : sinal * ((ang**b)/factorial(b))
         ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:33) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno : sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:32:39) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.175468
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 10, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:32:39) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:32:42) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.201681
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 10, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:33:21) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.140767
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 10, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:36) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 
while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 10, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:33:55) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 11, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:33:57) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	seno = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.168186
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1734/2505/main.py", line 11, in <module>
    soma = soma + sen
NameError: name 'sen' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:34) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:34:35) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.130079
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.5707963268
-0.9248322293
-1.0045248555
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.0471975512
0.8558007816
0.8662952838
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:34:36) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- EXECUTION TIME:
0.204321
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-1.5707963268
-0.9248322293
-1.0045248555
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
1.0471975512
0.8558007816
0.8662952838
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:34:48) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:08) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:24) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 17:35:35) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
	print(round(soma , 10))
-- OUTPUT:
1.5707963268
0.9248322293
1.0045248555
0.9998431014
1.0000035426
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 17:36:07) 
-- CODE:
from math import *
ang = eval(input("Digite o angulo : "))
k = int(input("Numero de termos : "))
soma = 0
b = 1
i = 0 

while(i < k):
	sinal = (-1)**i
	sen = sinal * ((ang**b)/factorial(b))
	soma = soma + sen
	b = b + 2
	i = i + 1
print(round(soma , 10))
-- EXECUTION TIME:
0.213756
-- TEST CASE 1:
---- input:
pi/2
5
---- correct output:
1.0000035426
---- user output:
1.0000035426
-- TEST CASE 2:
---- input:
-pi/2
4
---- correct output:
-0.9998431014
---- user output:
-0.9998431014
-- TEST CASE 3:
---- input:
pi/3
3
---- correct output:
0.8662952838
---- user output:
0.8662952838
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
